build: adjusts build.gradle for proper build and run server